kubernetes/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nhsonline-web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nhsonline-web
    spec:
      containers:
      - name: nhsonline-web
        image: nhsonline.azurecr.io/nhsonline-web:latest
        ports:
        - containerPort: 4000
      imagePullSecrets:
       - name: azure-registry
