kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nhsonline-stubs
  labels:
    app: nhsonline-stubs
spec:
  containers:
  - name: nhsonline-stubs
    image: nhsonline.azurecr.io/nhsonline-stubs:latest
  imagePullSecrets:
   - name: azure-registry
  restartPolicy: Never
