kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nhsonline-backendworker
  name: nhsonline-backendworker
spec:
  selector:
    app: nhsonline-backendworker
  ports:
  - port: 80
    targetPort: 5123
