kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nhsonline-web
spec:
  rules:
    - host: www.develop.bitraft.io
      http:
        paths:
          - backend:
              serviceName: nhsonline-web
              servicePort: 80
            path: /
